Fixed heading font being centered and too large on mobile

--- a/files/css/style.css
+++ b/files/css/style.css
@@ -1501,11 +1501,13 @@ footer p {
 
 	/*MAIN*/
 	main .container h1 {
-	    font-size: 40px;
-	    text-align: center;
+	    font-size: 32px;
 	}
 	main .container {
     	margin-bottom: 0px; 
+	}
+	main.banner-sml .container h1 {
+	    font-size: 40px;
 	}
 
 	/*ABOUT*/
